<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dirty_cam</name>
  <version>0.0.1</version>
  <description>A dirty and quick cam node</description>
  <maintainer email="giovannididio.bruno@gmail.com">gbr1</maintainer>
  <license>AGPLv3.0</license>

  <depend>vision_opencv</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
